Feature: i node-sass in react app

--- a/speedreader/src/Components/User/user.scss
+++ b/speedreader/src/Components/User/user.scss
@@ -12,7 +12,7 @@
 }
 
 .user {
-  background-image: linear-gradient(to right bottom, rgba(185, 192, 183, 0.8), #d7d1c98c), url(../../img/books.jpg);
+  background-image: linear-gradient(to right bottom, rgba(185, 192, 183, 0.8), #d7d1c98c), url(../../books.jpg);
   height          : 100vh;
   background-size : cover;
   
